<?xml version="1.0" encoding="utf-8"?>
<!--android:background="@android:color/transparent"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="0dp"
    tools:context="com.diffa.eticket.RegisterScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo_cinema" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="-10dp"
        android:layout_weight="1"
        android:background="@drawable/input_radius"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/input_radius"
        android:ems="10"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/input_radius"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/input_radius"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/input_radius"
        android:ems="10"
        android:hint="@string/repeatPassword"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <Button
        android:id="@+id/btnRegisterUser"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:background="#FFFF4444"
        android:onClick="RegisterUser"
        android:text="@string/ButtonRegister"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="#FFFF4444"
        android:onClick="BackIntent"
        android:text="@string/ButtonRegisterBack"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
