<?xml version="1.0" encoding="utf-8"?>
<!--android:background="@android:color/transparent"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="40dp"
    android:paddingBottom="0dp"
    tools:context="com.diffa.eticket.LoginScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="-20dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/logo_cinema" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="-20dp"
        android:layout_weight="1"
        android:background="@drawable/input_radius"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:background="@drawable/input_radius"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="#FFFF4444"
        android:onClick="LoginIntent"
        android:text="@string/ButtonLogin"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ORSplitter"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="#FFFF4444"
        android:onClick="RegisterIntent"
        android:text="@string/ButtonRegister"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
