<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="0dp"
    tools:context="com.diffa.eticket.MainScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#FFFF4444"
            android:onClick="clickHistory"
            android:text="Purchase History"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFF4444"
            android:onClick="logoutClick"
            android:text="Logout"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>

    <Spinner
        android:id="@+id/menuSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/menu_arrays" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.00"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="center"
                app:srcCompat="@drawable/firstavenger" />

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                android:text="@string/the_avengers"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="Regular - IDR 30000 |  Deluxe - IDR 45000"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/classRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/time1"
                    android:gravity="center"
                    android:orientation='horizontal'>

                    <RadioButton
                        android:id="@+id/regularClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/regular"
                        android:checked="true"
                        app:buttonTint="#FFFF4444" />

                    <RadioButton
                        android:id="@+id/deluxeClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/deluxe"
                        app:buttonTint="#FFFF4444" />

                    <EditText
                        android:id="@+id/noTickets"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#000000"
                        android:ems="5"
                        android:inputType="numberDecimal"
                        android:text="1" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="No. of Tickets" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/timeRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/time1"
                    android:gravity="center"
                    android:orientation='horizontal'>

                    <RadioButton
                        android:id="@+id/time1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:checked="true"
                        android:text="13:00"
                        app:buttonTint="#FFFF4444" />

                    <RadioButton
                        android:id="@+id/time2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="15:30"
                        app:buttonTint="#FFFF4444" />

                    <RadioButton
                        android:id="@+id/time3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="18:00"
                        app:buttonTint="#FFFF4444" />

                    <RadioButton
                        android:id="@+id/time4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="21:00"
                        app:buttonTint="#FFFF4444" />

                </RadioGroup>

            </LinearLayout>


            <Button
                android:id="@+id/btnBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="#FFFF4444"
                android:onClick="buyTicket"
                android:text="@string/buttonTicket"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/sypnosis"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sypnosisText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
